kubernetes/django-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-web
  labels:
    app.kubernetes.io/name: django-web
    app.kubernetes.io/component: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: django-web
      app.kubernetes.io/component: web
  template:
    metadata:
      labels:
        app.kubernetes.io/name: django-web
        app.kubernetes.io/component: web
    spec:
      containers:
        - name: web
          image: ilyag96/django-app
          ports:
            - containerPort: 80
              name: http
