kubernetes/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pg
  labels:
    app: pg
spec:
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: pg
      protocol: TCP
      name: pg
  selector:
    app: pg
