kubernetes/django-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-web
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  labels:
    app.kubernetes.io/name: django-web
    app.kubernetes.io/component: web
spec:
  rules:
    - host: firstapp.django-development.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: django-web
                port:
                  number: 80
